# spider-cc

./: LICENSE  README.md
live-url-crawler/: .gitignore  CLAUDE.md  COVERAGE_NOTES.md  DOMAIN_CRAWL.md  OPEN_SOURCE_REFERENCES.md  PIPELINE_ANALYSIS.md  PLAN_200B.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt
live-url-crawler/configs/: docs_python_org.json  domain_docs_python_small.json  multi_seed_example.tsv
live-url-crawler/data/sample_run/docs_python_org/: candidates.csv  extracted_text.jsonl  manifest.jsonl  (+1 more)
live-url-crawler/scripts/: monitor_run.sh  run_async_crawl_10x.sh  run_common_crawl_sites_100x.sh  run_common_crawl_sites_500k.sh  run_docs_python_sample.sh  run_domain_docs_python_fast.sh  run_domain_docs_python_small.sh  run_domain_from_seed.sh  run_extreme_speed.sh  run_full_pipeline.sh  run_multiproc_10x.sh  run_pipeline_500k_from_seed.sh  run_pipeline_docs_python_fast.sh  run_pipeline_docs_python_turbo.sh  run_pipeline_multi_seed_turbo.sh  show_pages_sample.sh
live-url-crawler/src/: analyze_crawl_quality.py  async_pipeline_crawler.py  browser_fingerprint.py  cc_columnar_english_seeder.py  cc_english_domain_exporter.py  cc_index_url_seeder.py  check_cc_live_status.py  common_crawl_site_discovery.py  domain_link_crawler.py  estimate_scale.py  monitor_cc_live_run.py  monitor_run.py  multiproc_async_crawler.py  optimized_live_crawler.py  pipeline_domain_crawler.py  verify_full_site_crawl.py
live-url-crawler/tests/: conftest.py  test_common_crawl_site_discovery.py  test_domain_link_crawler.py  test_pipeline_domain_crawler.py
(+1 files in other folders)
