[project]
name = "live-url-crawler"
version = "0.1.0"
description = "Live web crawler seeded from Common Crawl site discovery"
requires-python = ">=3.10"
dependencies = ["trafilatura>=1.12.0"]

[project.optional-dependencies]
async = ["aiohttp>=3.9"]
dev = ["pytest>=7.0", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled loosely; long CLI/log strings are common here
    "B008",  # allow function calls in argument defaults where used
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
